--- a/server/package.json
+++ b/server/package.json
@@ -11,14 +11,23 @@
   "type": "module",
   "description": "",
   "dependencies": {
+    "@prisma/client": "^6.4.1",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/node": "^22.13.4",
+    "@types/otp-generator": "^4.0.2",
+    "chalk": "^5.4.1",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "helmet": "^8.0.0",
+    "otp-generator": "^4.0.1",
+    "paseto": "^3.1.4",
+    "pino": "^9.6.0",
     "prisma": "^6.4.1",
+    "prom-client": "^15.1.3",
     "tsx": "^4.19.3",
-    "typescript": "^5.7.3"
+    "typescript": "^5.7.3",
+    "zod": "^3.24.2"
   }
 }
