--- a/server/package.json
+++ b/server/package.json
@@ -41,6 +41,8 @@
     "nodemon": "^3.1.9",
     "otp-generator": "^4.0.1",
     "paseto": "^3.1.4",
+    "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
     "pino": "^9.6.0",
     "prisma": "^6.4.1",
     "prom-client": "^15.1.3",
