--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,8 @@
     "dev": "nodemon",
     "build": "npx tsc -b",
     "format": "biome format --write ./",
-    "prepare": "cd .. && husky server/.husky || true"
+    "prepare": "cd .. && husky server/.husky || true",
+    "test": "cross-env NODE_OPTIONS=--experimental-vm-modules npx jest"
   },
   "lint-staged": {
     "*.{js,ts,cjs,mjs,d.cts,d.mts,jsx,tsx,json,jsonc}": [
@@ -31,6 +32,7 @@
     "@types/otp-generator": "^4.0.2",
     "chalk": "^5.4.1",
     "cors": "^2.8.5",
+    "cross-env": "^7.0.3",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "helmet": "^8.0.0",
@@ -47,6 +49,11 @@
     "zod": "^3.24.2"
   },
   "devDependencies": {
-    "@biomejs/biome": "1.9.4"
+    "@biomejs/biome": "1.9.4",
+    "@types/jest": "^29.5.14",
+    "@types/supertest": "^6.0.2",
+    "jest": "^29.7.0",
+    "supertest": "^7.0.0",
+    "ts-jest": "^29.2.6"
   }
 }
