--- a/client/package.json
+++ b/client/package.json
@@ -8,7 +8,6 @@
     "build": "tsc -b && vite build",
     "format": "biome format --write ./",
     "preview": "vite preview",
-    "prepare": "cd .. && husky client/.husky || true",
     "cy:open-e2e": "cypress open --e2e --browser chrome",
     "cy:open-unit": "cypress open --e2e --browser chrome",
     "cy:run-unit": "cypress run --component",
@@ -25,8 +24,13 @@
     ]
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-label": "^2.1.2",
+    "@radix-ui/react-select": "^2.1.6",
     "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-switch": "^1.1.3",
+    "@radix-ui/react-tabs": "^1.1.3",
+    "@radix-ui/react-toast": "^1.2.6",
     "@tanstack/react-router": "^1.111.11",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
